[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/digitalix.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/dotline.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/game/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/game/Opponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/game/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scripts/GameField.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 1600 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 1600 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 539, 256 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 539, 256 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 46
font_data = ExtResource( 1 )

[node name="GameField" type="Node"]
script = ExtResource( 6 )

[node name="BallTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true

[node name="Field" type="Node" parent="."]

[node name="Background" type="ColorRect" parent="Field"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Field/Background"]
position = Vector2( 540, 960 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall" type="StaticBody2D" parent="Field"]

[node name="LeftWall" type="CollisionShape2D" parent="Field/Wall"]
position = Vector2( -32, 960 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Field/Wall"]
position = Vector2( 1112, 960 )
shape = SubResource( 2 )

[node name="OpponentGoal" type="Area2D" parent="Field"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/OpponentGoal"]
position = Vector2( 540, -256 )
shape = SubResource( 3 )

[node name="PlayerGoal" type="Area2D" parent="Field"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/PlayerGoal"]
position = Vector2( 540, 2176 )
shape = SubResource( 4 )

[node name="Interface" type="Node" parent="."]

[node name="OpponentName" type="Label" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 0.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
text = "Opponent"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="Interface"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 800.0
margin_right = -252.0
margin_bottom = -31.9999
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="Interface"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
text = "Player"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="Interface"]
anchor_top = 0.504
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 24.3201
margin_right = -252.0
margin_bottom = -800.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Interface"]
anchor_left = 0.5
anchor_top = 0.03
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 252.0
margin_top = 742.4
margin_right = -32.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "90"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallLabel" type="Label" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 0.502
margin_top = 860.0
margin_bottom = -3.84003
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opponent" parent="." instance=ExtResource( 4 )]
position = Vector2( 540, 48 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 540, 1872 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 540, 960 )
[connection signal="timeout" from="BallTimer" to="." method="_on_BallTimer_timeout"]
[connection signal="body_entered" from="Field/OpponentGoal" to="." method="_on_OpponentGoal_body_entered"]
[connection signal="body_entered" from="Field/PlayerGoal" to="." method="_on_PlayerGoal_body_entered"]
